--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -10,5 +10,6 @@ tree_file_list:
     - sidelist-programming/programming-ios.html
     - sidelist-programming/programming-c.html
     - sidelist-programming/programming-cpp.html
+    - sidelist-programming/programming-xamarin.html
 #    - sidelist-programming/programming-javascript.html
     - sidelist-parameters/parameters-reference.html
