--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -11,5 +11,5 @@ tree_file_list:
     - sidelist-programming/programming-c.html
     - sidelist-programming/programming-cpp.html
     - sidelist-programming/programming-xamarin.html
-#    - sidelist-programming/programming-javascript.html
+    - sidelist-programming/programming-javascript.html
     - sidelist-parameters/parameters-reference.html
