--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ android_camera_enhancer: /document-normalizer/docs/programming/android/api-refer
 javascript: /document-normalizer/docs/programming/javascript/
 javascript_api: /document-normalizer/docs/programming/javascript/api-reference/
 javascript_release_notes: /document-normalizer/docs/programming/javascript/release-notes/
+javascript_user_guide: /document-normalizer/docs/programming/javascript/user-guide/
 
 xamarin: /document-normalizer/docs/programming/xamarin/
 xamarin_api: /document-normalizer/docs/programming/xamarin/api-reference/
