--- a/_config.yml
+++ b/_config.yml
@@ -37,9 +37,12 @@ xamarin_api: /document-normalizer/docs/programming/xamarin/api-reference/
 xamarin_release_notes: /document-normalizer/docs/programming/xamarin/release-notes/
 xamarin_camera_enhancer: /document-normalizer/docs/programming/xamarin/api-reference/camera-enhancer/
 
-enumerations: /document-normalizer/docs/programming/enumerations/
+enumerations: /capture-vision/docs/enums/
 parameters_reference: /document-normalizer/docs/parameters/reference/
 release_notes: /document-normalizer/docs/release-notes/
+
+dcv_cpp_methods: /capture-vision/docs/server/programming/cplusplus/api-reference/capture-vision-router/
+
 
 useVersionTree: true
 
