--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ enumerations: /capture-vision2/docs/enums/
 parameters_reference: /document-normalizer/docs/parameters/reference/
 release_notes: /document-normalizer/docs/release-notes/
 
-dcv_cpp_methods: /capture-vision2/docs/server/programming/cplusplus/api-reference/capture-vision-router/
+dcv_cpp_api: /capture-vision2/docs/server/programming/cplusplus/api-reference/
 
 
 useVersionTree: true
