--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
           cd /home/ubuntu 
           [ -d DDNDocPreview ] && rm -rf DDNDocPreview
           [ -d document-normalizer-docs-preview ] && rm -rf document-normalizer-docs-preview
-          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
+          [ -d Docs-Template-Repo-Preview-DCV2 ] && rm -rf Docs-Template-Repo-Preview-DCV2
           cd /home/ubuntu
 
       - name: Build the site
@@ -71,12 +71,12 @@ jobs:
           cd /home/ubuntu
           [ -d DDNDocPreview ] && rm -rf DDNDocPreview
           [ -d document-normalizer-docs-preview ] && rm -rf document-normalizer-docs-preview
-          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
+          [ -d Docs-Template-Repo-Preview-DCV2 ] && rm -rf Docs-Template-Repo-Preview-DCV2
           [ ! -d DDNDocPreview ] && mkdir -p DDNDocPreview
           git clone --depth 1 --branch preview https://${{ secrets.GIT_USER }}:${{ secrets.GIT_PAT }}@github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs-preview
-          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
+          git clone --depth 1 --branch jenny-preview-branch https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview-DCV2
           cp -rfp ./document-normalizer-docs-preview/* ./DDNDocPreview/
-          cp -rfp ./Docs-Template-Repo-Preview/* ./DDNDocPreview/
+          cp -rfp ./Docs-Template-Repo-Preview-DCV2/* ./DDNDocPreview/
           sed -i -e "1,3s/blob\/master$/blob\/preview/" \
           -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DDNDocPreview/_config.yml
           cd DDNDocPreview && bundle exec jekyll build --incremental
