--- a/_data/product_version.yml
+++ b/_data/product_version.yml
@@ -1,7 +1,7 @@
 useGroupedVersion: true
 
 version_info_list:
-  - latest version
+  - value: latest version
   - value: 1.x
     child:
       - 1.0.21
